# odin-thirdparty-gen

./: .gitignore  README.md  justfile  ols.json  thirdparty.lock.json
capstone/bindgen/: bindgen.sjson  imports.odin
capstone/example/: main.odin
capstone/odin/: arm.odin  arm64.odin  bpf.odin  capstone.odin  evm.odin  m680x.odin  m68k.odin  mips.odin  mos65xx.odin  platform.odin  ppc.odin  riscv.odin  sh.odin  sparc.odin  systemz.odin  tms320c64x.odin  tricore.odin  wasm.odin  x86.odin  xcore.odin
capstone/src/: CMakeLists.txt  build_bindings.bat
odin/capstone/: arm.odin  arm64.odin  bpf.odin  capstone.odin  evm.odin  m680x.odin  m68k.odin  mips.odin  mos65xx.odin  platform.odin  ppc.odin  riscv.odin  sh.odin  sparc.odin  systemz.odin  tms320c64x.odin  tricore.odin  wasm.odin  x86.odin  xcore.odin
odin/ffmpeg/: avcodec.odin  avdevice.odin  avfilter.odin  avformat.odin  avio.odin  avstring.odin  avutil.odin  bprint.odin  buffer.odin  buffersink.odin  buffersrc.odin  channel_layout.odin  codec.odin  codec_desc.odin  codec_id.odin  defs.odin  dict.odin  error.odin  frame.odin  hwcontext.odin  log.odin  opt.odin  packet.odin  pixfmt.odin  rational.odin  samplefmt.odin  support.odin  swresample.odin  swscale.odin  utility.odin
odin/sokol/app/: app.odin
recipes/: common.py  sync_generated.py
recipes/capstone/: build_bindings.bat  build_bindings.py  package.sjson
recipes/ffmpeg/: build_bindings.bat  package.sjson
recipes/sokol/: build_bindings.bat  build_bindings.py  package.sjson  sync_sokol.py
tools/: bootstrap.py  package_release.py  package_tools.py
(+84 files in other folders)
